quick css error fixed. Height was incorrect on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -735,6 +735,7 @@ h3 {
        .reportTextContainer {
         display: block;
         width: 100%;
+        height: 100%;
     }
 
         .reportChartContainer{
